--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1032,6 +1032,7 @@ footer
   color: $regular-white
   font-family: $font-family-primary
   font-size: 15px
+  overflow: hidden
   p
     padding: 33px 0 36px 0
 
